<!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~ Copyright (c) 2022, Dr. Brunthaler GmbH
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
	<string name="app_name">InLoc4Log BLE GW</string>
	<string name="feature_name">BLE GW</string>

	<string name="title">@string/app_name</string>

	<string name="menu_main">Main</string>
	<string name="manage_beacons">Beacon Manager</string>
	<string name="scan_beacons">Beacon Scanner</string>
	<string name="status_title">Gateway Status</string>

	<string name="menu_filter">Filter</string>
	<string name="menu_filter_uuid">Only "Ranging" GATT Service</string>
	<string name="menu_filter_nearby">Only nearby devices</string>

	<string name="unknown_device">Unknown Device</string>
	<string name="turn_on">On</string>
	<string name="turn_off">Off</string>
	<string name="title_led_state">LED</string>
	<string name="title_button_state">Button</string>
	<string name="state">State</string>
	<string name="button_pressed">PRESSED</string>
	<string name="button_released">RELEASED</string>
	<string name="button_unknown">UNKNOWN</string>
	<string name="led_summary">Toggle the switch to turn the LED 3 on or off.</string>
	<string name="button_summary">Press Button 1 on the dev kit.</string>

	<string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
	<string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>nRF Blinky</b> will not use this information in any way.</string>
	<string name="location_permission_action">Grant permission</string>
	<string name="location_permission_settings">Settings</string>

	<string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
	<string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
	<string name="bluetooth_disabled_action">Enable</string>

	<string name="blinky_guide_title">CAN\'T SEE YOUR BLINKY?</string>
	<string name="blinky_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure the <b>ble_app_blinky</b> firmware and SoftDevice are flashed.</string>
	<string name="blinky_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your Blinky is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
	<string name="blinky_guide_location_action">Enable</string>

	<string name="not_supported_title">DEVICE NOT SUPPORTED</string>
	<string name="not_supported_info">1. The Blinky service hasn\'t been found on the device\'s attribute table.
		\n\n2. Make sure the DK is flashed with the correct firmware.
		\n\n3. If you used the DK with another firmware before, the old services might have been cached by the system.</string>
	<string name="not_supported_action">Fix and try again</string>

	<string name="state_scanning">Scanning…</string>
	<string name="state_ble_connecting">Connecting…</string>
	<string name="state_discovering_services">Discovering services…</string>
	<string name="state_initializing">Initializing…</string>
	<string name="state_disconnected">Device disconnected.</string>
    <string name="title_activity_status_screen">StatusScreenActivity</string>
	<string name="prefs">Settings</string>
    <string name="subtitle_mqtt_off">MQTT disconnected.</string>
	<string name="subtitle_mqtt_on">MQTT connected.</string>
	<string name="msg_tag_deleted">tag deleted…</string>
	<string name="msg_tag_delete_undo">Undo</string>
	<string name="msg_tag_undo_done">Undo completed</string>
	<string name="msg_tag_delete_done">tag has been deleted!</string>
	<string name="state_disconnecting">DISCONNECTING</string>
	<string name="state_not_started">NOT STARTED</string>
	<string name="state_connecting">CONNECTING</string>
	<string name="state_connected">CONNECTED</string>
	<string name="state_services_found">SERVICES FOUND</string>
	<string name="status_tag_addr">Tag: %1$s</string>
	<string name="status_tag_name">ID: %1$s</string>
	<string name="status_urate">Updates: %1$.1fHz</string>
	<string name="settings_saved">Settings saved! Please restart App</string>
	<string name="notification_title">BLE GATT Gateway</string>
	<string name="notification_msg">%1$d devices connected (⌀%2$.1fHz). %3$s</string>
	<string name="prefs_showpos">DEBUGGING: show Pos</string>
	<string name="prefs_wlsip">MQTT: Server IP</string>
	<string name="prefs_topic">MQTT: Topic</string>
	<string name="prefs_name_instead_id">MQTT: Use name instead ID</string>
</resources>
